<resources>
    <string name="app_name">Diente Sabio</string>
    <string name="registro">Registrarse</string>
    <string name="ingresar">Ingresar</string>
    <string name="email">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="olvido_contra">Olvidaste tu contraseña</string>
    <string name="regresar">Regresar</string>
    <string name="Recupera_contra">Recuperar contraseña</string>
    <string name="nombre_reg">Nombre</string>
    <string name="apellido_reg">Apellido</string>
    <string name="contra_reg">Reingresar contraseña</string>
    <string name="crea_perfil">Crea tu perfil</string>
    <string name="paciente">Soy paciente</string>
    <string name="estudiante">Soy estudiante</string>
    <string name="profesional">Soy profesional</string>
    <string name="politicas">Politicas y Privacidad</string>
    <string name="Buenos_dias">Buenos dias</string>
    <string name="mandibula">Mandibula</string>
    <string name="cuello">Cuello</string>
    <string name="maxilar">Maxilar</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="perfil">Perfil</string>
    <string name="comentarios">Comentarios</string>
    <string name="historial">Historial</string>
    <string name="ajustes">Ajustes</string>
    <string name="Edita_perfil">Edita tu perfil</string>
    <string name="usuario">usuario</string>
    <string name="sitio_web">Sitio_web</string>
    <string name="biografia">Biografía</string>
    <string name="perfil_pri">Perfil privado</string>
    <string name="notificacion">Notificaciones</string>
    <string name="mensajes">Recibir mensajes</string>
    <string name="cuenta">Cuenta</string>
    <string name="cerrar_cuenta">Cerrar cuenta</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="Modo_oscuro">Modo oscuro</string>
    <string name="Busqueda">Busqueda reciente</string>
    <string name="guardados">Guardados</string>
    <string name="guardar">Guardar</string>
    <string name="descargas">Descargas</string>
    <string name="ver_tarde">Ver mas tarde</string>
    <string name="borrar_histo">Borrar historial</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="Politicas">Politicas</string>
    <string name="cookies">Politicas de cookies</string>
    <string name="privacidad">Politicas de privacidad</string>
    <string name="legal">Aviso legal</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ayuda">Ayuda</string>
    <string name="btn_inicio">boton inicio</string>
    <string name="btn_guardado">Guardado</string>
    <string name="busquedad">imagen </string>
    <string name="aviso">Aviso legal</string>


</resources>