<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_fondo_inicio"
    android:orientation="vertical"
    android:padding="36dp"
    tools:context=".Ingresar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/azul_fondo_inicio"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|end"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ig_usuario"
                android:layout_width="match_parent"
                android:layout_height="151dp"
                android:contentDescription="@string/busquedad"
                app:srcCompat="@drawable/ds2" />

            <TextView
                android:id="@+id/tv_bienvenida"
                style="@style/txt_titol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bienvenido" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ev_apellido"
                style="@style/txt_formulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/et_apellido"
                style="@style/txt_formulario"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@color/crema_rellenar"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="5dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv_contra"
                style="@style/txt_formulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/contraseña" />

            <EditText
                android:id="@+id/et_contra"
                style="@style/txt_formulario"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@color/crema_rellenar"
                android:ems="10"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:padding="5dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btn_olvidocontra"
                style="@style/txt_extra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/azul_fondo_inicio"
                android:gravity="left"
                android:onClick="olvido_contra"
                android:text="@string/olvido_contra" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="right"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_ingresar"
                style="@style/txt_boton_amarillo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/naranja_boton"
                android:gravity="center"
                android:onClick="inicio"
                android:text="@string/ingresar" />

            <Button
                android:id="@+id/btn_regresar"
                style="@style/txt_extra"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/azul_fondo_inicio"
                android:onClick="main"
                android:text="@string/regresar" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>