<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Elegir_perfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@color/azul_fondo_inicio"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_polticas"
            style="@style/txt_titol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/crea_perfil" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center|top"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="411dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/azul_fondo_inicio"
                android:gravity="center"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_estudiante"
                    android:layout_width="194dp"
                    android:layout_height="48dp"
                    android:onClick="inicio"
                    android:text="@string/estudiante" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@color/blanco_fondo"
                    android:contentDescription="@string/busquedad"
                    app:srcCompat="@android:drawable/ic_menu_crop" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/rb_profesional"
                    android:layout_width="194dp"
                    android:layout_height="48dp"
                    android:onClick="inicio"
                    android:text="@string/profesional" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@color/blanco_fondo"
                    android:contentDescription="@string/busquedad"
                    android:src="@android:drawable/ic_menu_crop" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/rb_paciente"
                    android:layout_width="194dp"
                    android:layout_height="48dp"
                    android:onClick="inicio"
                    android:text="@string/paciente" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@color/blanco_fondo"
                    android:contentDescription="@string/busquedad"
                    android:src="@android:drawable/ic_menu_crop" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4.5"
        android:background="@color/azul_fondo_inicio"
        android:gravity="right"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_regresar"
            style="@style/txt_extra"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/azul_fondo_inicio"
            android:gravity="center|right"
            android:onClick="regresar"
            android:padding="36dp"
            android:text="@string/regresar"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
</LinearLayout>