<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_fondo_inicio"
    android:contentDescription="@string/busquedad"
    android:orientation="vertical"
    android:padding="36dp"
    tools:context=".Olvido_contrasenya">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ig_usuario"
            android:layout_width="match_parent"
            android:layout_height="191dp"
            app:srcCompat="@drawable/ds2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="start"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_email"
            style="@style/txt_formulario_dentro"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:background="@color/crema_rellenar"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="5dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btn_ingresar"
            style="@style/txt_boton_amarillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul_boton"
            android:gravity="center"
            android:onClick="ingresar_datos"
            android:text="@string/Recupera_contra" />


    </LinearLayout>

</LinearLayout>