<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Politicas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@color/azul_fondo_inicio"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_polticas"
            style="@style/txt_titol"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/Politicas" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center|top"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="411dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/azul_fondo_inicio"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_cookies"
                    style="@style/txt_titol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cookies" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/txt_contenido"
                    android:layout_width="267dp"
                    android:layout_height="125dp"
                    android:background="@color/blanco_fondo"
                    android:gravity="center"
                    android:text="@string/cookies" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/tv_seguridad"
                    style="@style/txt_titol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/privacidad" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/txt_contenido"
                    android:layout_width="267dp"
                    android:layout_height="125dp"
                    android:background="@color/blanco_fondo"
                    android:gravity="center"
                    android:text="@string/privacidad" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/tv_aviso"
                    style="@style/txt_titol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/aviso" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/txt_contenido"
                    android:layout_width="267dp"
                    android:layout_height="125dp"
                    android:background="@color/blanco_fondo"
                    android:gravity="center"
                    android:text="@string/aviso" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4.5"
        android:background="@color/azul_fondo_inicio"
        android:gravity="right"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_regresar"
            style="@style/txt_extra"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/azul_fondo_inicio"
            android:gravity="center|right"
            android:onClick="regresar"
            android:padding="36dp"
            android:text="@string/regresar"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
</LinearLayout>